@@ -1,3 +1,3 @@
-EBUILD q4wine-9999.ebuild 1138 RMD160 fa898e7d6bc3419d0aa4fa75bf61503b16f568a0 SHA1 91178e5c5b90ce70d42c66bd87dae0b17e4596cb SHA256 c7609a4c5aa622709f979f3e354e04fba04140f49bb4b1efeee3700d569f3cbf
-MISC ChangeLog 2458 RMD160 61f8a2db88686c7f2d99edb0996e48675efad7d9 SHA1 b15851c9fbc27a9fa5383b28ffaae437bb9d52d3 SHA256 f785591402019cd5bfd733bb0d9175f4bec7c04e0fb567b54c9c325dab42a681
-MISC metadata.xml 546 RMD160 e230346047e9037972e219ef08a07afe86f9d746 SHA1 0a9300e8d2cf4b592f5370ef3792dfda3d90039e SHA256 0773060cd37479defa8c1a15552db1c0f896cc998338557b595dd8bad14f2373
+EBUILD q4wine-9999.ebuild 1129 RMD160 8659ed6754d122b12b759090abfb08a3bfea9207 SHA1 08904b5bbef9cd9e75929788b1e023b916f6e5c5 SHA256 99553fe1f281aa582aa6c01e1ce300e8303d61c8d6da700f73acc98e46210be9
+MISC ChangeLog 2592 RMD160 c6f1de669af4a502cf1239973b96a5740ab3a586 SHA1 cde65b9b6aca935aaa71032950b911db68776e7a SHA256 1efb0673267a6933f69639646e55d4ca8b355cd6cce88bf684ffbc7623e500a1
+MISC metadata.xml 549 RMD160 5c756897a37f0d645c4c07b1c9d92a48313e756d SHA1 fe15edab7dee6e00cfe253903a739fdd1509f979 SHA256 f3880f876a52df83d6ae2e9c4b2c42b3b336d50a48fcce595ea65bd9fbc42672
